--- a/example/src/example.scss
+++ b/example/src/example.scss
@@ -1,6 +1,43 @@
 @import "charts.css";
 
+:root {
+    --primary: #001f3f;
+    --secondary: #1d1f21;
+    --white: rgb(220, 220, 220);
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    color: rgb(35, 35, 35);
+    color: var(--primary);
+    background: #bfbfbf;
+}
+
+h1, h2, h3, h4, h5, p {
+    padding-bottom: 1rem;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 1.5rem;
+}
+
+.vue-charts-css {
+    margin-bottom: 4rem;
+
+    .charts-css {
+        padding: 1rem;
+        background: var(--white);
+
+        .heading {
+            --heading-size: 2rem;
+            font-weight: bold;
+        }
+    }
+
+    .charts-css.legend {
+        margin-bottom: 1rem;
+        background: var(--secondary);
+        color: var(--white);
+    }
 }
