--- a/example/src/example.scss
+++ b/example/src/example.scss
@@ -1,15 +1,21 @@
 @import "charts.css/dist/charts.css";
 
 :root {
-    --primary: #001f3f;
-    --secondary: #1d1f21;
-    --white: rgb(220, 220, 220);
+    --primary: #f57;
+    --secondary: #666;
+    --off-black: rgb(40, 40, 40);
+    --off-white: rgb(220, 220, 220);
+    --white: #fff;
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    color: var(--off-black);
+    background: var(--off-white);
+}
+
+a {
     color: var(--primary);
-    background: #bfbfbf;
 }
 
 h1, h2, h3, h4, h5, p {
@@ -23,10 +29,50 @@ h1, h2, h3, h4, h5, p {
     padding: 1.5rem;
 }
 
+.buttons-wrapper {
+    padding: 1rem 0;
+    margin: -0.1rem 0;
+}
+
+.options > div {
+    display: flex;
+    align-items: center;
+    padding-bottom: 0.25rem;
+
+    label {
+        display: inline-block;
+        padding: 0 0.2rem;
+        background: var(--white);
+        color: var(--primary);
+    }
+
+    input:not([type=checkbox]) {
+        width: 8rem;
+        margin: 0.1rem 0;
+    }
+}
+
+input:not([type=checkbox]), textarea {
+    border: 0;
+    border-radius: 0.25rem;
+    padding: 0.25rem 0.75rem;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+textarea {
+    width: 100%;
+}
+
+.options > div > label {
+    margin: 0 0.5rem;
+}
+
 button {
     border: 0;
-    background-color: var(--secondary);
-    padding: 0.25rem 0.65rem;
+    background-color: var(--primary);
+    margin: 0.1rem;
+    border-radius: 0.25rem;
+    padding: 0.5rem 0.75rem;
     color: var(--white);
     cursor: pointer;
     transition: opacity 0.2s ease, background-color 0.2s ease;
@@ -52,8 +98,6 @@ button {
 
     .heading input, th[scope=row] input {
         display: inline-block;
-        border: 0;
-        background-color: rgba(0, 0, 0, 0);
     }
 
     th[scope=row] input {
@@ -77,7 +121,7 @@ button {
 
     .charts-css {
         padding: 1rem;
-        background: var(--white);
+        background: var(--off-white);
 
         .heading {
             --heading-size: 2rem;
@@ -88,6 +132,6 @@ button {
     .charts-css.legend {
         margin-bottom: 1rem;
         background: var(--secondary);
-        color: var(--white);
+        color: var(--off-white);
     }
 }
